src/test/ui/macros/rfc-3086-metavar-expr/requiring-feature.stderr
error[E0658]: meta-variable expressions are unstable
  --> $DIR/requiring-feature.rs:3:10
   |
LL |         ${ count(e) }
   |          ^^^^^^^^^^^^
   |
   = note: see issue #83527 <https://github.com/rust-lang/rust/issues/83527> for more information
   = help: add `#![feature(macro_metavar_expr)]` to the crate attributes to enable

error[E0658]: meta-variable expressions are unstable
  --> $DIR/requiring-feature.rs:9:8
   |
LL |     ( $$a:ident ) => {
   |        ^
   |
   = note: see issue #83527 <https://github.com/rust-lang/rust/issues/83527> for more information
   = help: add `#![feature(macro_metavar_expr)]` to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
